--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "fs": "0.0.1-security",
+    "image-to-rgba-matrix": "^1.0.0",
     "lodash": "^4.17.21",
     "luxon": "^2.3.0",
     "mongodb": "^4.3.0",
-    "pug": "^3.0.2"
+    "osmtogeojson": "^3.0.0-beta.4",
+    "pug": "^3.0.2",
+    "sharp": "^0.30.0",
+    "throttled-queue": "^2.1.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^8.0.0",
