--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
@@ -36,7 +37,8 @@
     "osmtogeojson": "^3.0.0-beta.4",
     "pug": "^3.0.2",
     "sharp": "^0.30.0",
-    "throttled-queue": "^2.1.2"
+    "throttled-queue": "^2.1.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^8.0.0",
